--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="myScript.js"></script>
+    <link rel="stylesheet" href="change.css"></link>
   </head>
   <body>
-    <h2>External JavaScript</h2>
+    <h2>Spor toto Süper lig</h2>
 
-    <p id="demo">A Paragraph.</p>
+    <p id="demo">Tablo:</p>
 
-    <button type="button" onclick="myFunction()">Try it</button>
+    <button type="button" onclick="button()">Try it</button>
 
     <p>(myFunction is stored in an external file called "myScript.js")</p>
 
     <div>
-        <img src="img/football.png" >
+      <img class="fussball" src="img/football.png" />
     </div>
   </body>
 </html>
